# Forest-SLAM

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md
data_acquisition/: get_frames.py  imports.py
ros_ws/src/: Forest_SLAM_BotanicGarden_1006_01.pth  bundle_adjustment.py  convert_poses.py  data.py  estimate_pose.py  evaluate_pose_estimator.py  gt_localisation.py  gt_mapping.py  images_and_poses.py  localisation.py  mapping.py  mono_slam.py  parse_rosbag.py  plot_losses.py  plot_trajectories.py  pose_estimations.py  stereo_slam.py  test.py  train.py
ros_ws/src/forest_slam_ros/: CMakeLists.txt  package.xml
ros_ws/src/forest_slam_ros/launch/: forest_slam_mono.launch  forest_slam_stereo.launch
ros_ws/src/forest_slam_ros/rviz/: forest_slam_stereo.rviz
ros_ws/src/forest_slam_ros/src/: mono_slam.py  stereo_slam.py
ros_ws/src/pose_estimation_results/1005_00/: 1005_00_Ground_Truth.txt  SuperPoint_SuperGlue_Mono.txt  SuperPoint_SuperGlue_Stereo.txt
ros_ws/src/pose_estimation_results/1005_01/: 1005_01_Ground_Truth.txt  SuperPoint_SuperGlue_Mono.txt  SuperPoint_SuperGlue_Stereo.txt
ros_ws/src/pose_estimation_results/1005_07/: 1005_07_Ground_Truth.txt  SuperPoint_SuperGlue_Mono.txt  SuperPoint_SuperGlue_Stereo.txt
ros_ws/src/pose_estimation_results/1006_01/: 1006_01_Ground_Truth.txt  SuperPoint_SuperGlue_Mono.txt  SuperPoint_SuperGlue_Stereo.txt
src/: dalsa_rgb0.yaml  globals.py  intrinsics.json  localisation.py  mapping.py  online_slam.py
src/data_acquisition/: convert_frames.py  imports.py  save_rgb_depth_frames.py
(+14 files in other folders)
